--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Secular+One" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rate my Professor</title>
+    <title>Rate Our Professor</title>
   </head>
   <body>
     <div id="app"></div>
